--- a/views/main_galileo.ejs
+++ b/views/main_galileo.ejs
@@ -26,7 +26,7 @@
                         ></path>
                     </svg>
                 </div>
-                <h2 class="text-[#1C160C] text-lg font-bold leading-tight tracking-[-0.015em]">OK GAME</h2>
+                <h2 class="text-[#1C160C] text-lg font-bold leading-tight tracking-[-0.015em]">BEST GAME</h2>
             </div>
             <div class="flex flex-1 justify-end gap-8">
                 <div class="flex items-center gap-9">
