--- a/views/main.ejs
+++ b/views/main.ejs
@@ -128,10 +128,12 @@
             },
             success: function(data){
                 if(data.result == true) {
+                  const decodedUrl = decodeURIComponent(data.url);
+                  console.log('url = ', decodedUrl);
                     // Open the game in a new window
-                    var newWindow = window.open(data.url, 'SlotGame', "width=1400, height=930, left=100, right=100, toolbar=no, location=no, directories=no, status=no, menubar=no, resizable=no, scrollbars=no, copyhistory=no");
+                    var newWindow = window.open(decodedUrl, 'SlotGame', "width=1400, height=930, left=100, right=100, toolbar=no, location=no, directories=no, status=no, menubar=no, resizable=no, scrollbars=no, copyhistory=no");
                     if (!newWindow) {
-                        window.location.href = data.url;
+                        window.location.href = decodedUrl;
                         // alert("Popup blocked! Please allow popups for this site.");
                     }
                 } else {
