--- a/views/main.ejs
+++ b/views/main.ejs
@@ -78,14 +78,14 @@
         <div class="layout-content-container flex flex-col w-full px-4 sm:px-6 py-6">
             <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-3">
                 <% games.forEach(game => { %>
-                    <div class="flex flex-col gap-3 pb-3" onclick="gameStart('<%= game.code %>')">
+                    <div class="flex flex-col gap-3 pb-3" onclick="gameStart('<%= game.gameCode %>')">
                         <div
                                 class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-xl"
-                                style='background-image: url("<%= game.image %>");'
+                                style='background-image: url("<%= game.thumbnailUrl%>");'
                         ></div>
                         <div>
-                            <p class="text-[#1C160C] text-base font-medium leading-normal"><%= game.name %></p>
-                            <p class="text-[#A18249] text-sm font-normal leading-normal"><%= game.description %></p>
+                            <p class="text-[#1C160C] text-base font-medium leading-normal"><%= game.gameName %></p>
+                            <p class="text-[#A18249] text-sm font-normal leading-normal"><%= 'description' %></p>
                         </div>
                     </div>
                 <% }); %>
