--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,6 +10,8 @@
             onload="this.rel='stylesheet'"
             href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Plus+Jakarta+Sans%3Awght%40400%3B500%3B700%3B800"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@2.1.0/css/SpoqaHanSans-kr.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.js"></script>
     <title> GAME</title>
@@ -47,6 +49,9 @@
             /* Additional variables for game layout */
             --game-title-color: #1C160C;
             --game-description-color: #A18249;
+        }
+        body {
+            font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
         }
 
         @media (max-width: 768px) {
